--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     ],
     "require": {
         "php": "^7.4 | ^8.0",
-        "ext-mbstring": "*"
+        "ext-mbstring": "*",
+        "symfony/polyfill-php80": "^1.23"
     },
     "autoload": {
         "psr-4": {
