--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "enjoys/url-converter",
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "vimeo/psalm": "^4.9"
     },
     "license": "MIT",
     "authors": [
